--- a/TankRentals/TankRentals/Views/Customers/Details.cshtml
+++ b/TankRentals/TankRentals/Views/Customers/Details.cshtml
@@ -7,6 +7,6 @@
 <h2>@Model.Name</h2>
 @if (Model.BirthDate != null)
 {
-    <text>@Model.BirthDate.Value.Date.ToShortDateString()</text>
+    <text>@Model.BirthDate.Date.ToShortDateString()</text>
 }
 
