--- a/TankRentals/TankRentals/Views/Tanks/TanksTable.cshtml
+++ b/TankRentals/TankRentals/Views/Tanks/TanksTable.cshtml
@@ -5,28 +5,55 @@
 }
 
 <h2>Tanks Table</h2>
-@{ 
+
+@Html.ActionLink("Add Tank", "New", "Tanks", new { }, new { @class = "btn btn-default" })
+<br />
+<br />
+@{
     if (Model.Count == 0)
     {
         <text>No tanks could be found in database.</text>
     }
     else
     {
-        <table  class="table table-striped table-hover ">
-            <tr>
-                <th>Id</th>
-                <th>Model</th>
-                <th>Tank Type</th>
-            </tr>
-            @foreach(var tank in Model)
-            {
+        <table id="tanks" class="table table-striped table-hover">
+
+            <thead>
                 <tr>
-                    <th>@tank.Id</th>
-                    <th><a asp-area="" asp-controller="Tanks" asp-action="Details" asp-route-id="@tank.Id">@tank.Model</a></th>
-                    <th>@tank.TankType.Name</th>
+                    <th>Id</th>
+                    <th>Model</th>
+                    <th>Tank Type</th>
                 </tr>
-            }
+            </thead>
+            <tbody>
+                @foreach (var tank in Model)
+                {
+                    <tr>
+                        <td>@tank.Id</td>
+                        <td>@Html.ActionLink(tank.Model, "Edit", "Tanks", new { id = tank.Id })</td>
+                        <td>@tank.TankType.Name</td>
+                    </tr>
+                }
+            </tbody>
         </table>
+    }
+
+    @section Scripts
+{
+
+    @*DataTables imports adapted for bootstrap styling*@
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/dt-1.10.18/datatables.min.css" />
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs/dt-1.10.18/datatables.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+
+            $('#tanks').DataTable();
+
+        });
+
+    </script>
+
     }
 }
 
